--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@nuxt/ui": "^2.12.3",
     "@vueuse/core": "^10.7.2",
-    "defu": "^6.1.4"
+    "defu": "^6.1.4",
+    "puppeteer": "^21.9.0",
+    "valibot": "^0.27.0"
   }
 }
